# the-tenet-of-life

./: Cargo.toml
src/: color2.rs  color3.rs  lib.rs  main.rs
