[package]
name = "the-tenet-of-life"
version = "0.1.0"
authors = ["ilya sheprut <optozorax@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fntools = { git = "https://github.com/WaffleLapkin/fntools", rev = "dce0040" }
